I edited the about us page. I added my info, my image, and I also added the linkedin logo and mail logo for our individual contacts. I have created a new folder in which these images are store, and I modified the css file to properly format the images via classes and class dimensions. I do not know if this is how you're supposed to do it, so feel free to change it.

--- a/style.css
+++ b/style.css
@@ -455,6 +455,16 @@ footer {
     text-decoration: none;
     font-weight: bold;
   }
+  .linkedin{
+    width: 20px;
+    height: 20px;
+    position: relative;
+  }
+  .mail-img{
+    width: 20px;
+    height: 20px;
+    position: relative;
+  }
   
   .header .navigation a:hover {
     text-decoration: underline;
